--- a/language/oop5/overloading.xml
+++ b/language/oop5/overloading.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 1428093951bffcd49176329c388f004f4c9b7a32 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 28d123ef985df5a7b86f3601e035968ee1b3b142 Maintainer: chuso Status: ready -->
 <!-- Reviewed: no -->
  <sect1 xml:id="language.oop5.overloading" xmlns="http://docbook.org/ns/docbook">
   <title>Sobrecarga</title>
@@ -59,14 +59,14 @@
        <row>
         <entry>5.3.0</entry>
         <entry>
-         Se añade <function>__callStatic</function>.
+         Se añade <link linkend="object.callstatic">__callStatic</link>.
          Se añadieron advertencias para hacer cumplir la visibilidad public e impedir la declaración static.
         </entry>
        </row>
        <row>
         <entry>5.1.0</entry>
         <entry>
-         Añadidos los métodos <function>__isset</function> y <function>__unset</function>.
+         Añadidos los métodos <link linkend="object.isset">__isset</link> y <link linkend="object.unset">__unset</link>.
         </entry>
        </row>
       </tbody>
@@ -79,48 +79,48 @@
   <sect2 xml:id="language.oop5.overloading.members">
    <title>Sobrecarga de propiedades</title>
 
-   <methodsynopsis>
-    <type>void</type><methodname>__set</methodname>
+   <methodsynopsis xml:id="object.set">
+    <modifier>public</modifier> <type>void</type><methodname>__set</methodname>
     <methodparam><type>string</type><parameter>name</parameter></methodparam>
     <methodparam><type>mixed</type><parameter>value</parameter></methodparam>
    </methodsynopsis>
-   <methodsynopsis>
-    <type>mixed</type><methodname>__get</methodname>
+   <methodsynopsis xml:id="object.get">
+    <modifier>public</modifier> <type>mixed</type><methodname>__get</methodname>
     <methodparam><type>string</type><parameter>name</parameter></methodparam>
    </methodsynopsis>
-   <methodsynopsis>
-    <type>bool</type><methodname>__isset</methodname>
+   <methodsynopsis xml:id="object.isset">
+    <modifier>public</modifier> <type>bool</type><methodname>__isset</methodname>
     <methodparam><type>string</type><parameter>name</parameter></methodparam>
    </methodsynopsis>
-   <methodsynopsis>
-    <type>void</type><methodname>__unset</methodname>
+   <methodsynopsis xml:id="object.unset">
+    <modifier>public</modifier> <type>void</type><methodname>__unset</methodname>
     <methodparam><type>string</type><parameter>name</parameter></methodparam>
    </methodsynopsis>
 
    <para>
-    <function>__set</function> se ejecuta al escribir datos sobre
+    <link linkend="object.set">__set()</link> se ejecuta al escribir datos sobre
     propiedades inaccesibles.
    </para>
 
    <para>
-    <function>__get</function> se utiliza para consultar datos a partir de
+    <link linkend="object.get">__get()</link> se utiliza para consultar datos a partir de
     propiedades inaccesibles.
    </para>
 
    <para>
-    <function>__isset</function> se lanza al llamar a
+    <link linkend="object.isset">__isset()</link> se lanza al llamar a
     <function>isset</function> o a <function>empty</function>
     sobre propiedades inaccesibles.
    </para>
 
    <para>
-    <function>__unset</function> se invoca cuando se usa
+    <link linkend="object.unset">__unset()</link> se invoca cuando se usa
     <function>unset</function> sobre propiedades inaccesibles.
    </para>
 
    <para>
     El parámetro <varname>$name</varname> es el nombre de la propiedad con
-    la que se está interactuando. En el método <function>__set</function>
+    la que se está interactuando. En el método <link linkend="object.set">__set()</link>
     el parámetro <varname>$value</varname> especifica el valor que se debe
     asignar a la propiedad <varname>$name</varname>.
    </para>
@@ -137,8 +137,8 @@
    <note>
     <para>
      Debido a la forma en que PHP procesa el operador de asignación,
-     el valor que devuelve <function>__set</function> se ignora.
-     Del mismo modo, nunca se llama a <function>__get</function> al 
+     el valor que devuelve <link linkend="object.set">__set()</link> se ignora.
+     Del mismo modo, nunca se llama a <link linkend="object.get">__get()</link> al 
      encadenar asignaciones como ésta:
      <literal><![CDATA[ $a = $obj->b = 8; ]]></literal>
     </para>
@@ -160,9 +160,9 @@
 
    <example>
     <title>
-     Sobrecarga de propiedades mediante los métodos <function>__get</function>,
-     <function>__set</function>, <function>__isset</function>
-     y <function>__unset</function>
+     Sobrecarga de propiedades mediante los métodos <link linkend="object.get">__get()</link>,
+     <link linkend="object.set">__set()</link>, <link linkend="object.isset">__isset()</link>
+     y <link linkend="object.unset">__unset()</link>
     </title>
     <programlisting role="php">
 <![CDATA[
@@ -276,24 +276,24 @@ Notice:  Propiedad indefinida mediante __get(): hidden en <file> en la línea 69
   <sect2 xml:id="language.oop5.overloading.methods">
    <title>Sobrecarga de métodos</title>
 
-   <methodsynopsis>
-    <type>mixed</type><methodname>__call</methodname>
+   <methodsynopsis xml:id="object.call">
+    <modifier>public</modifier> <type>mixed</type><methodname>__call</methodname>
     <methodparam><type>string</type><parameter>name</parameter></methodparam>
     <methodparam><type>array</type><parameter>arguments</parameter></methodparam>
    </methodsynopsis>
-   <methodsynopsis>
-    <type>mixed</type><methodname>__callStatic</methodname>
+   <methodsynopsis xml:id="object.callstatic">
+    <modifier>public static</modifier> <type>mixed</type><methodname>__callStatic</methodname>
     <methodparam><type>string</type><parameter>name</parameter></methodparam>
     <methodparam><type>array</type><parameter>arguments</parameter></methodparam>
    </methodsynopsis>
 
    <para>
-    <function>__call</function> es lanzado al invocar
+    <link linkend="object.call">__call()</link> es lanzado al invocar
     un método inaccesible en un contexto de objeto.
    </para>
 
    <para>
-    <function>__callStatic</function> es lanzado al invocar
+    <link linkend="object.callstatic">__callStatic()</link> es lanzado al invocar
     un método inaccesible en un contexto estático.
    </para>
 
@@ -306,8 +306,8 @@ Notice:  Propiedad indefinida mediante __get(): hidden en <file> en la línea 69
 
    <example>
     <title>
-     Sobrecarga de métodos mediante los métodos <function>__call</function>
-     and <function>__callStatic</function>
+     Sobrecarga de métodos mediante los métodos <link linkend="object.call">__call()</link>
+     and <link linkend="object.callstatic">__callStatic()</link>
     </title>
     <programlisting role="php">
   <![CDATA[
