updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@322503 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/cloning.xml
+++ b/language/oop5/cloning.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 4f3e16d7854ee82114b8d849731fbd7de57cc627 Maintainer: yago Status: ready -->
+<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: yago Status: ready -->
+<!-- Reviewed: yes Maintainer: andresdzphp -->
+
  <sect1 xml:id="language.oop5.cloning" xmlns="http://docbook.org/ns/docbook">
   <title>Clonación de Objetos</title>
   
@@ -18,8 +20,8 @@
 
   <para>
    Para crear una copia de un objeto se utiliza la palabra clave clone (que invoca,
-   si fuera posible, al método <link linkend="language.oop5.cloning">__clone()</link> del objeto). No se puede llamar al método
-   <link linkend="language.oop5.cloning">__clone()</link> de un objeto directamente. 
+   si fuera posible, al método <link linkend="object.clone">__clone()</link> del objeto). No se puede llamar al método
+   <link linkend="object.clone">__clone()</link> de un objeto directamente. 
   </para>
 
   <informalexample>
@@ -35,10 +37,15 @@ $copia_de_objeto = clone $objeto;
    las propiedades del objeto. Las propiedades que sean referencias a otras
    variables, mantendrán las referencias.
   </para>
+  
+  <methodsynopsis xml:id="object.clone">
+   <type>void</type><methodname>__clone</methodname>
+   <void/>
+  </methodsynopsis>
 
   <para>
-   Una vez que la clonación ha finalizado, se llamará al método <link linkend="language.oop5.cloning">__clone()</link>
-   del nuevo objeto (si el método <link linkend="language.oop5.cloning">__clone()</link> estuviera definido), para permitirle
+   Una vez que la clonación ha finalizado, se llamará al método <link linkend="object.clone">__clone()</link>
+   del nuevo objeto (si el método <link linkend="object.clone">__clone()</link> estuviera definido), para permitirle
    realizar los cambios necesarios sobre sus propiedades.
   </para>
 
