updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@322504 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/cloning.xml
+++ b/language/oop5/cloning.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: yago Status: ready -->
-<!-- Reviewed: yes Maintainer: andresdzphp -->
+<!-- Reviewed: yes Maintainer: yago -->
 
  <sect1 xml:id="language.oop5.cloning" xmlns="http://docbook.org/ns/docbook">
   <title>Clonación de Objetos</title>
