--- a/reference/intl/locale/get-display-name.xml
+++ b/reference/intl/locale/get-display-name.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: seros Status: ready -->
+<!-- EN-Revision: 6a6061bbd4b1c78af2b50aba8ddd8fd5e4590b05 Maintainer: seros Status: ready -->
 <!-- Reviewed: no -->
 <refentry xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xml:id="locale.getdisplayname">
  <refnamediv>
@@ -12,7 +12,7 @@
  <refsect1 role="description">
   &reftitle.description;
   <para>
-   Estilo orientado a objetos
+   &style.oop;
   </para>
   <methodsynopsis>
    <modifier>static</modifier>
@@ -22,7 +22,7 @@
    <methodparam choice="opt"><type>string</type><parameter>in_locale</parameter></methodparam>
   </methodsynopsis>
   <para>
-   Estilo por procedimientos
+   &style.procedural;
   </para>
   <methodsynopsis>
    <type>string</type>
