English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@323003 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/float.xml
+++ b/language/types/float.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 2684871e4f3c75eadc3a39dc434161be83ae8b60 Maintainer: jpberdejo Status: ready -->
-<!-- Reviewed: no Maintainer: andresdzphp -->
-
+<!-- EN-Revision: 9295f92353a0d5578011862e1934850648244490 Maintainer: jpberdejo Status: ready -->
 <sect1 xml:id="language.types.float">
  <title>Números de punto flotante</title>
  
@@ -69,10 +67,10 @@ EXPONENT_DNUM [+-]?(({LNUM} | {DNUM}) [eE][+-]? {LNUM})
   </para>
   
   <para>
-   Así que nunca se confía en resultados de números flotantes hasta el último dígito y nunca se comparan
-   números de punto flotante para igualdad. Si es necesaria una mejor precisión,
-   las <link linkend="ref.bc">funciones matemáticas de precisión arbitraria</link> y
-   las funciones <link linkend="ref.gmp">gmp</link> están disponibles.
+   Así que nunca se confía en resultados de números flotantes hasta el último dígito y no se comparan
+   números de punto flotante directamente para igualdad. Si es necesaria una mejor precisión,
+   están disponibles las <link linkend="ref.bc">funciones matemáticas de precisión arbitraria</link>
+   y las funciones <link linkend="ref.gmp">gmp</link>.
   </para>
  </warning>
  
@@ -91,6 +89,43 @@ EXPONENT_DNUM [+-]?(({LNUM} | {DNUM}) [eE][+-]? {LNUM})
    intenta convertir un objeto a <type>float</type>.
   </para>
   
+ </sect2>
+
+ <sect2 xml:id="language.types.float.comparison">
+  <title>Comparing floats</title>
+
+  <para>
+   Como se indica en la advertencia anterior, comprobar la igualdad de valores de punto flotante 
+   es problemático, debido a la forma en que se representan internamente. Sin embargo,
+   hay maneras de hacer comparaciones de los valores de punto flotante que trabajan rodeando
+   a estas limitaciones.
+  </para>
+
+  <para>
+   Para comprobar la igualdad de valores de punto flotante, se utiliza un límite superior en el error
+   relativo debido al redondeo. Este valor se conoce como el epsilon de la máquina
+   o unidad de redondeo y es la menor diferencia aceptable en los cálculos.
+  </para>
+  
+  <informalexample>
+   <simpara>
+    <varname>$a</varname> y <varname>$b</varname> son iguales a 5 dígitos de
+    precisión.
+   </simpara>
+   <programlisting role="php">
+<![CDATA[
+<?php
+$a = 1.23456789;
+$b = 1.23456780;
+$epsilon = 0.00001;
+
+if(abs($a-$b) < $epsilon) {
+    echo "true";
+}
+?>
+]]>
+   </programlisting>
+  </informalexample>
  </sect2>
  
  <sect2 xml:id="language.types.float.nan">
