updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@323008 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/decon.xml
+++ b/language/oop5/decon.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 4e687b6db50ab3c9310d694cb460b531e486fa6d Maintainer: agarzon Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 28d123ef985df5a7b86f3601e035968ee1b3b142 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: yes Maintainer: andresdzphp -->
 
 <sect1 xml:id="language.oop5.decon" xmlns="http://docbook.org/ns/docbook">
  <title>Constructores y destructores</title>
@@ -52,17 +52,17 @@ $obj = new SubClass();
   </example>
   <para>
    Por motivos de compatibilidad, si PHP 5 no puede encontrar una función
-   <function>__construct</function> para una determinada clase, buscará
+   <link linkend="object.construct">__construct()</link> para una determinada clase, buscará
    el viejo estilo de la función constructora, mediante el nombre de la clase.
    Efectivamente, esto significa que en el único caso en el que se tendría
    compatibilidad es si la clase tiene un método llamado
-   <function>__construct</function> que fuese utilizado para diferentes propósitos.
+   <link linkend="object.construct">__construct()</link> que fuese utilizado para diferentes propósitos.
   </para>
   <para>
    A diferencia con otros métodos, PHP no generará un mensaje de error a
-   nivel de <constant>E_STRICT</constant> cuando <function>__construct</function>
-   es sobrescrita con diferentes parámetros que los que tiene el
-   <function>__construct</function> parent.
+   nivel de <constant>E_STRICT</constant> cuando <link linkend="object.construct">__construct()</link>
+   es sobrescrito con diferentes parámetros que los métodos padre 
+   <link linkend="object.construct">__construct()</link> tienen.
   </para>
   <para>
    A partir de PHP 5.3.3, los métodos con el mismo nombre que el último
@@ -121,9 +121,9 @@ $obj = new MyDestructableClass();
    </programlisting>
   </example>
   <para>
-   Como los constructores, los destructores parent no serán llamados
-   implícitamente por el motor. Para ejecutar un destructor parent, se
-   deberá explicitar un llamada a <function>parent::__destruct</function>
+   Como los constructores, los destructores padre no serán llamados
+   implícitamente por el motor. Para ejecutar un destructor padre, se
+   deberá llamar explícitamente a <function>parent::__destruct</function>
    en el interior del destructor.
   </para>
   <para>
@@ -140,7 +140,7 @@ $obj = new MyDestructableClass();
   </note>
   <note>
    <para>
-    Intentar arrojar una excepción desde un destructor (invocado en la finalización
+    Intentar lanzar una excepción desde un destructor (invocado en la finalización
     del script) causa un error fatal.
    </para>
   </note>
