--- a/language/predefined/serializable.xml
+++ b/language/predefined/serializable.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: ac59046078f4e2e4fd27a43aef5b6530061d4c7a Maintainer: yago Status: ready -->
+<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no -->
 
 <phpdoc:classref xml:id="class.serializable" xmlns:phpdoc="http://php.net/ns/phpdoc" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xi="http://www.w3.org/2001/XInclude">
  
@@ -18,8 +19,8 @@
    
    <para>
     Las clases que implementan esta interfaz no soportan 
-    <link linkend="language.oop5.magic.sleep">__sleep()</link> ni
-    <link linkend="language.oop5.magic.sleep">__wakeup()</link>. El método
+    <link linkend="object.sleep">__sleep()</link> ni
+    <link linkend="object.wakeup">__wakeup()</link>. El método
     serialize se llama cuando una instancia requiere ser serializada. Esto no invoca 
     __destruct() ni tiene ningún efecto adicional a menos que se programe dentro
     del método. Cuando los datos son deserializados, la clase es conocida y el 
