--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 1e0cb85be781aedf9822622e3a654c1a6b8cd2cc Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
+
 <chapter xml:id="language.variables" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Variables</title>
  
@@ -902,7 +903,7 @@ echo $foo->$baz[1] . "\n";
     </para>
    </note>
    <simpara>
-    PHP también entiende matrices en el contexto de variables de
+    PHP también entiende arrays en el contexto de variables de
     formularios (vea la <link linkend="faq.html">faq relacionada</link>).
     Se puede, por ejemplo, agrupar juntas variables relacionadas o usar esta
     característica para obtener valores de una entrada "select" múltiple.
