--- a/language/predefined/serializable/serialize.xml
+++ b/language/predefined/serializable/serialize.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: yago Status: ready -->
 <!-- Reviewed: yes -->
 
 <refentry xml:id="serializable.serialize" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -22,7 +22,7 @@
    <para>
     Este método actúa como el 
     <link linkend="language.oop5.decon.destructor">destructor</link> del objeto. El método
-    <function>__destruct</function> <emphasis>no</emphasis> será llamado después de usar este 
+    <link linkend="object.destruct">__destruct()</link> <emphasis>no</emphasis> será llamado después de usar este 
     método.
    </para>
   </note>
@@ -53,7 +53,7 @@
   &reftitle.seealso;
   <para>
    <simplelist>
-    <member><link linkend="language.oop5.magic.sleep">__sleep()</link></member>
+    <member><link linkend="object.sleep">__sleep()</link></member>
    </simplelist>
   </para>
  </refsect1>
