--- a/language/predefined/serializable/unserialize.xml
+++ b/language/predefined/serializable/unserialize.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: 73b29d30142e317823ff24879b0439b4b03a7af0 Maintainer: yago Status: ready -->
 <!-- Reviewed: yes -->
 
 <refentry xml:id="serializable.unserialize" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -12,7 +12,7 @@
  <refsect1 role="description">
   &reftitle.description;
   <methodsynopsis>
-   <modifier>abstract</modifier> <modifier>public</modifier> <type>mixed</type><methodname>Serializable::unserialize</methodname>
+   <modifier>abstract</modifier> <modifier>public</modifier> <type>void</type><methodname>Serializable::unserialize</methodname>
    <methodparam><type>string</type><parameter>serialized</parameter></methodparam>
   </methodsynopsis>
   <para>
@@ -22,7 +22,7 @@
    <para>
     Este método actua como el
     <link linkend="language.oop5.decon.constructor">constructor</link> del objeto. El método
-    <function>__construct</function> <emphasis>no</emphasis> será llamado después de este
+    <link linkend="object.construct">__construct()</link> <emphasis>no</emphasis> será llamado después de este
     método.
    </para>
   </note>
@@ -48,7 +48,7 @@
  <refsect1 role="returnvalues">
   &reftitle.returnvalues;
   <para>
-   Devuelve el valor original unserializado.
+   El valor devuelto por este método es ignorado.
   </para>
  </refsect1>
 
@@ -56,7 +56,7 @@
   &reftitle.seealso;
   <para>
    <simplelist>
-    <member><link linkend="language.oop5.magic.sleep">__wakeup()</link></member>
+    <member><link linkend="object.wakeup">__wakeup()</link></member>
    </simplelist>
   </para>
  </refsect1>
