updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@323336 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/wrappers/audio.xml
+++ b/language/wrappers/audio.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 8b6d169424ff189bb563ef4c3f35f8adff3f42c5 Maintainer: chuso Status: ready -->
+<!-- EN-Revision: d512da133791952053f20c2b2bbe230df275bcc1 Maintainer: chuso Status: ready -->
 
 <refentry xml:id="wrappers.audio" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -148,7 +148,7 @@
       <row>
        <entry><literal>channels</literal></entry>
        <entry>
-        Número de canales de audio a codificar, normalmente 1 (mono), o 2 (estéreo).
+        El número de canales de audio a codificar, normalmente 1 (mono), o 2 (estéreo).
         Puede llegar a 16.
        </entry>
        <entry>2</entry>
@@ -157,7 +157,7 @@
       <row>
        <entry><literal>comments</literal></entry>
        <entry>
-        Array de strings a codificar en la cabecera de la pista.
+        Un array de strings a codificar en la cabecera de la pista.
        </entry>
        <entry/>
        <entry>Escritura/Adición</entry>
