--- a/language/predefined/iterator.xml
+++ b/language/predefined/iterator.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 4724b47c25b48f509355d27291aa6893ad0b40c0 Maintainer: gerardocdc Status: ready -->
+<!-- EN-Revision: bd9f0a6ffd153dd9cebeb44356389953f9407b61 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
 <phpdoc:classref xml:id="class.iterator" xmlns:phpdoc="http://php.net/ns/phpdoc" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xi="http://www.w3.org/2001/XInclude">
  
@@ -46,7 +47,16 @@
    
   </section>
   
+   <section xml:id="iterator.iterators">
+   <title>Iteradores Predefinidos</title>
+   <para>
+    PHP ya ofrece un número de iteradores para muchas de las tareas del día a día.
+    Véase la lista de <link linkend="spl.iterators">iteradores SPL</link>.
+   </para>
+  </section>
+  
   <section xml:id="iterator.examples">
+   &reftitle.examples;
    <example xml:id="iterator.example.basic"><!-- {{{ -->
     <title>Uso básico</title>
     <para>
