--- a/language/predefined/variables/server.xml
+++ b/language/predefined/variables/server.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 3c827996b5d39a5dc39da99fba779c895149adab Maintainer: chuso Status: ready -->
+<!-- EN-Revision: 2536ec9c8f63038fd6857caf82fe4ce856ca301b Maintainer: chuso Status: ready -->
 <!-- Reviewed: no -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.server" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -160,7 +160,16 @@
      <listitem>
       <simpara>
        Fecha Unix de inicio de la petición. Disponible desde PHP 5.1.0.
-       Desde PHP 5.4.0 es un <type>float</type> con microsegundos.
+      </simpara>
+     </listitem>
+    </varlistentry>
+    
+     <varlistentry>
+     <term>'<varname>REQUEST_TIME_FLOAT</varname>'</term>
+     <listitem>
+      <simpara>
+       El timestamp del inicio de la solicitud, con precisión microsegundo.
+       Disponible desde PHP 5.4.0.
       </simpara>
      </listitem>
     </varlistentry>
