--- a/language/types/null.xml
+++ b/language/types/null.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d2bd0304a2a99a266d6e09aca973956143ebf1f8 Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: 68c00dcb1a13208937382da1cd05239d1b73a922 Maintainer: jorgeolaya Status: ready --> 
+<!-- Reviewed: yes Maintainer: andresdzphp -->
+
 <sect1 xml:id="language.types.null">
  <title>NULO</title> 
  
@@ -29,11 +31,13 @@
   </para>
   </listitem>
  </itemizedlist>
+ 
   <sect2 xml:id="language.types.null.syntax">
   <title>Sintaxis</title>
+   
   <para>
-  No hay más que un valor de tipo <type>null</type>,  Y  es el 
-  la palabra clave  &null; entre mayúsculas y minúsculas.
+   No hay más que un valor de tipo <type>null</type>, y  es la 
+   constante  &null; entre mayúsculas y minúsculas.
   </para>
  <informalexample>
  <programlisting role="php">
@@ -45,15 +49,17 @@ $var = NULL;
    </programlisting>
   </informalexample>  
   <para>
-   Véase también las funciones <function>is_null</function> y
+   Véase también las funciones <function>is_null</function> y 
    <function>unset</function>.
   </para>
  </sect2>
  <sect2 xml:id="language.types.null.casting">
-  <title>La conversión a <literal>NULL</literal></title>
+  <title>El moldeado a <literal>NULL</literal></title>
+  
   <para>
-   Lanzar una variable a <type>null</type> eliminará la variable 
-   y borrara su valor. 
+   Moldear una variable a <type>null</type> usando <literal>(unset) $var</literal> 
+   <emphasis>no</emphasis> eliminará la variable o destruirá su valor.
+   Esto sólo retornará un valor &null;.
   </para>
  </sect2>
 </sect1>
