English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@323431 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 28d123ef985df5a7b86f3601e035968ee1b3b142 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 4beb2c6470877411230f5855e354149abf132be8 Maintainer: jpberdejo Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
@@ -1413,6 +1413,12 @@ echo ((true ? 'true' : false) ? 't' : 'f');
     PHP soporta un operador de control de errores: el signo de arroba (@). Cuando
     se antepone a una expresión en PHP, cualquier mensaje de error que pueden
     ser generado por esa expresión será ignorado.
+   </simpara>
+   <simpara>
+    Si se ha establecido una función de controlador de errores personalizado con
+    <function>set_error_handler</function> entonces todavía será
+    llamada, pero este controlador de errores personalizado puede (y debe) llamar a <function>error_reporting</function>
+    el cual devolverá 0 cuando la llamada que provocó el error fue precedida por el signo @.
    </simpara>
    <simpara>
     Si la propiedad <link linkend="ini.track-errors"><option>track_errors</option></link>
