--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 48573a3b164e53168cbc2acff2c714811ec6387c Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 52abaae9b28b7a347de09092ece31599315b5edf Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
   <title>Constantes</title>
@@ -211,13 +211,13 @@ echo CONSTANT;
        </row>
       </thead>
       <tbody>
-       <row>
+       <row xml:id="constant.line">
         <entry><constant>__LINE__</constant></entry>
         <entry>
          Línea actual en el fichero.
         </entry>
        </row>
-       <row>
+       <row xml:id="constant.file">
         <entry><constant>__FILE__</constant></entry>
         <entry>         
          Ruta completa y nombre del fichero. Si se usa dentro de un include,
@@ -227,7 +227,7 @@ echo CONSTANT;
          la ruta relativa según las circunstancias. 
         </entry>
        </row>
-       <row>
+       <row xml:id="constant.dir">
         <entry><constant>__DIR__</constant></entry>
         <entry>
          Directorio del fichero. Si se utiliza dentro de un include,
@@ -237,7 +237,7 @@ echo CONSTANT;
          directorio root. (Fue añadida en PHP 5.3.0)
         </entry>
        </row>
-       <row>
+       <row xml:id="constant.function">
         <entry><constant>__FUNCTION__</constant></entry>
         <entry>
          Nombre de la función. (Añadida en PHP 4.3.0) Desde PHP 5 esta
@@ -245,7 +245,7 @@ echo CONSTANT;
          (sensible a mayúsculas). En PHP 4 su valor siempre es en minúsculas.
         </entry>
        </row>
-       <row>
+       <row xml:id="constant.class">
         <entry><constant>__CLASS__</constant></entry>
         <entry>
          Nombre de la clase. (Añadida en PHP 4.3.0) Desde PHP 5 esta constante
@@ -257,7 +257,7 @@ echo CONSTANT;
          que está siendo utilizado.
         </entry>
        </row>
-        <row>
+        <row xml:id="constant.trait">
         <entry><constant>__TRAIT__</constant></entry>
         <entry>
          El nombre de el trait. (Añadido en PHP 5.4.0) A partir de PHP 5.4 esta constante 
@@ -266,14 +266,14 @@ echo CONSTANT;
         </entry>
        </row>
        
-       <row>
+       <row xml:id="constant.method">
         <entry><constant>__METHOD__</constant></entry>
         <entry>
          Nombre del método de la clase. (Añadida en PHP 5.0.0.) Nombre del método
          devuelto donde fue declarada. (sensible a mayúsculas).
         </entry>
        </row>
-       <row>
+       <row xml:id="constant.namespace">
         <entry><constant>__NAMESPACE__</constant></entry>
         <entry>
          Nombre del espacio de nombres actual (sensible a mayúsculas). Esta constante
@@ -286,7 +286,7 @@ echo CONSTANT;
     </table>
    </para>
    <para>
-    Ver también
+    Véase también
     <function>get_class</function>,
     <function>get_object_vars</function>,
     <function>file_exists</function>&listendand;
