updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@323828 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/traits.xml
+++ b/language/oop5/traits.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 6ee44cfc781a421d15d38e772348757fa9444d32 Maintainer: chuso Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 15cfbd76e1a3cfafdff7185efa483185797f0edc Maintainer: chuso Status: ready -->
+<!-- Reviewed: no Maintainer: chuso -->
+
 <sect1 xml:id="language.oop5.traits" xmlns="http://docbook.org/ns/docbook">
  <title>Traits</title>
  <para>
@@ -147,7 +148,7 @@ trait Hola {
 
 trait Mundo {
     public function decirMundo() {
-        echo ' Mundo';
+        echo 'Mundo';
     }
 }
 
