Updated to the most recent version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@323954 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 52abaae9b28b7a347de09092ece31599315b5edf Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: 62be8e53d5baf2dd884b560d8eb7a634d9bbf3b5 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
@@ -195,7 +195,7 @@ echo CONSTANT;
    </simpara>
    
    <para>
-    Hay siete constantes predefinidas que cambian dependiendo de donde son usadas.
+    Hay ocho constantes predefinidas que cambian dependiendo de donde son usadas.
     Por ejemplo el valor de <constant>__LINE__</constant> depende en la línea que
     se use en el script. Estas constantes especiales son sensibles a mayúsculas
     y son las siguientes:
