English version update
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324060 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/control-structures/break.xml
+++ b/language/control-structures/break.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: fd40a64466902debef595a8875d619dd8b6d105d Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.break" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>break</literal></title>
@@ -48,6 +48,28 @@ while (++$i) {
 ]]>
    </programlisting>
   </informalexample>
+ </para>
+ <para>
+  <table>
+   <title>Registro de cambios para <literal>break</literal></title>
+   <tgroup cols="2">
+    <thead>
+     <row>
+      <entry>&Version;</entry>
+      <entry>&Description;</entry>
+     </row>
+    </thead>
+    <tbody>
+     <row>
+      <entry>5.4.0</entry>
+      <entry>
+       Removida la posibilidad de pasar variables (por ejemplo, <literal>$num = 2; break $num;</literal>)
+       como argumento numérico.
+      </entry>
+     </row>
+    </tbody>
+   </tgroup>
+  </table>
  </para>
 </sect1>
 
