updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324111 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/traits.xml
+++ b/language/oop5/traits.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 15cfbd76e1a3cfafdff7185efa483185797f0edc Maintainer: chuso Status: ready -->
+<!-- EN-Revision: f250f6c487154007d2676163dc98d0cae46a7c2e Maintainer: chuso Status: ready -->
 <!-- Reviewed: no Maintainer: chuso -->
 
 <sect1 xml:id="language.oop5.traits" xmlns="http://docbook.org/ns/docbook">
@@ -162,7 +162,7 @@ class MiHolaMundo {
 $o = new MiHolaMundo();
 $o->decirHola();
 $o->decirMundo();
-$o->decirAdmiración();>
+$o->decirAdmiración();
 ?>
 ]]>
    </programlisting>
