--- a/language/control-structures/continue.xml
+++ b/language/control-structures/continue.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: c7aca484fd1d7eaccd03f0e011f858fa93d105b9 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: d90c8c357f629f829a4efe7f4445384621827ba9 Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="control-structures.continue" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><literal>continue</literal></title>
@@ -57,15 +57,15 @@ while ($i++ < 5) {
 ?>
 ]]>
    </programlisting>
-   </informalexample>
-  </para>
-  <para>
-   Omitir el punto y coma después del <literal>continue</literal> puede llevar a 
-   confusión. He aquí un ejemplo de lo que no se debe hacer.
-  </para>
-  <para>
-   <informalexample>
-    <programlisting role="php">
+  </informalexample>
+ </para>
+ <para>
+  Omitir el punto y coma después del <literal>continue</literal> puede llevar a 
+  confusión. He aquí un ejemplo de lo que no se debe hacer.
+ </para>
+ <para>
+  <informalexample>
+   <programlisting role="php">
 <![CDATA[
 <?php
 for ($i = 0; $i < 5; ++$i) {
@@ -75,35 +75,57 @@ for ($i = 0; $i < 5; ++$i) {
 }
 ?>
 ]]>
-    </programlisting>
-    <para>
-     Se esperaría que el resultado sea:
-    </para>
-    <screen>
+   </programlisting>
+   <para>
+    Se esperaría que el resultado sea:
+   </para>
+   <screen>
 <![CDATA[
 0
 1
 3
 4
 ]]>
-    </screen>
-    <para>
-     Pero la salida de este script será:
-    </para>
-    <screen>
+   </screen>
+   <para>
+    Pero la salida de este script será:
+   </para>
+   <screen>
 <![CDATA[
 2
 ]]>
-    </screen>
-    <para>
-     debido a que el <literal>continue print "$i\n";</literal> se evalúa completo
-     como una sola expresión y así <function>print</function> se llama solamente
-     cuando <literal>$i == 2</literal> es verdadero. (El valor de retorno de
-     <literal>print</literal> es pasado a <literal>continue</literal> como el
-     argumento numérico.)
-    </para>
-   </informalexample>
-  </para>
+   </screen>
+   <para>
+    debido a que el <literal>continue print "$i\n";</literal> se evalúa completo
+    como una sola expresión y así <function>print</function> se llama solamente
+    cuando <literal>$i == 2</literal> es verdadero. (El valor de retorno de
+    <literal>print</literal> es pasado a <literal>continue</literal> como el
+    argumento numérico.)
+   </para>
+  </informalexample>
+ </para>
+ <para>
+  <table>
+   <title>Control de cambios para <literal>continue</literal></title>
+   <tgroup cols="2">
+    <thead>
+     <row>
+      <entry>&Version;</entry>
+      <entry>&Description;</entry>
+     </row>
+    </thead>
+    <tbody>
+     <row>
+      <entry>5.4.0</entry>
+      <entry>
+       Se ha eliminado la posibilidad de pasar variables (por ejemplo, <literal>$num = 2; continue $num;</literal>)
+       como argumento numérico.
+      </entry>
+     </row>
+    </tbody>
+   </tgroup>
+  </table>
+ </para>
 </sect1>
 
 <!-- Keep this comment at the end of the file
