--- a/language/types.xml
+++ b/language/types.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 28359dc5d49dd2a10378915626aeb4120699ef4e Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: 5faa7a6747bca628b3bdcc9f93aec5603b65581f Maintainer: x1v4nx Status: ready -->
 <!-- Reviewed: no -->
 
 <chapter xml:id="language.types" xmlns="http://docbook.org/ns/docbook">
@@ -67,7 +67,7 @@
   </itemizedlist>
 
   <para>
-   Y finalmente dos tipos especiales:
+   Y finalmente tres tipos especiales:
   </para>
 
   <itemizedlist>
@@ -81,6 +81,12 @@
    <listitem>
     <simpara>
      <type>NULL</type>
+    </simpara>
+   </listitem>
+
+   <listitem>
+    <simpara>
+     <type>callable</type>
     </simpara>
    </listitem>
 
@@ -197,6 +203,7 @@ if (is_string($un_bool)) {
  &language.types.object;
  &language.types.resource;
  &language.types.null;
+ &language.types.callable;
  &language.types.pseudo-types;
  &language.types.type-juggling;
 
