File updated to the lastest english version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324460 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/oop5/interfaces.xml
+++ b/language/oop5/interfaces.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: d08c651831f0675c3f936203916db8742e60fcae Maintainer: x1v4nx Status: ready -->
-<!-- Reviewed: yes -->
+<!-- EN-Revision: addba5dcce72f6c9e66751d0d12fa830bdef4707 Maintainer: x1v4nx Status: ready -->
+<!-- Reviewed: no Maintainer: x1v4nx -->
 
  <sect1 xml:id="language.oop5.interfaces" xmlns="http://docbook.org/ns/docbook">
   <title>Interfaces de objetos</title>
@@ -11,7 +11,7 @@
    métodos son manipulados.
   </para>
   <para>
-   Las interfaces son definidas utilizando la palabra clave interface, de la
+   Las interfaces son definidas utilizando la palabra clave <literal>interface</literal>, de la
    misma forma que con clases estándar, pero sin métodos que tengan su contenido
    definido.
   </para>
@@ -52,7 +52,7 @@
    <para>
     Es posible tener constantes dentro de las interfaces. Las constantes de interfaces
     funcionan como las <link linkend="language.oop5.constants">constantes de clases</link>
-    excepto porque no pueden ser sobreescritas por una clase/interfaz que las herede.
+    excepto porque no pueden ser sobrescritas por una clase/interfaz que las herede.
    </para>
   </sect2>
   <sect2 xml:id="language.oop5.interfaces.examples">
