File updated to the lastest english version
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324555 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/callable.xml
+++ b/language/types/callable.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: ba5706cbb51f82381941b1b7cae0fc37e2953d75 Maintainer: x1v4nx Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: x1v4nx Status: ready -->
 <!-- Reviewed: no Maintainer: x1v4nx -->
 
 <sect1 xml:id="language.types.callable">
@@ -24,10 +24,10 @@
   <para>
    Una función PHP se pasa por su nombre como una <type>string</type>. Se puede utilizar
    cualquier función nativa o definida por el usuario, excepto contrucciones del lenguaje, tal como:
-   <function>array</function>, <function>echo</function>,
+   <function>array</function>, <link linkend="function.echo"><literal>echo</literal></link>,
    <function>empty</function>, <function>eval</function>, 
-   <function>exit</function>, <function>isset</function>, 
-   <function>list</function>, <function>print</function> o
+   <link linkend="function.exit"><literal>exit</literal></link>, <function>isset</function>, 
+   <function>list</function>, <link linkend="function.print"><literal>print</literal></link> o
    <function>unset</function>.
   </para>
 
