--- a/language/context/parameters.xml
+++ b/language/context/parameters.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 06c05635f102bfbe67d719ac8d52aaa4171bbf40 Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: 318492 Maintainer: jorgeolaya Status: ready --> 
 <!-- Reviewed: yes -->
 
 <refentry xml:id="context.params" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
@@ -22,11 +22,11 @@
     <varlistentry xml:id="context.params.notification">
      <term>
       <parameter>notification</parameter>
-      <type>callback</type>
+      <type>callable</type> 
      </term>
      <listitem>
       <para>
-       Una <type>llamada de retorno</type> que se llamará cuando se produce un evento en una secuencia.
+       Una <type>callable</type> que se llamará cuando se produce un evento en una secuencia.
      </para>
       <para>
        Véase <function>stream_notification_callback</function> para más detalles.
