updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@324563 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/functions.xml
+++ b/language/functions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 85c790a244dbf8b711aa381db1025dd2fab4db94 Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: yes Maintainer: andresdzphp -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
  
 <chapter xml:id="language.functions" xmlns="http://docbook.org/ns/docbook">
  <title>Funciones</title>
@@ -387,18 +387,18 @@ Hacer un tazón de yogur acidófilo de frambuensa.
    Los valores son devueltos usando la sentencia opcional return. Se
    puede devolver cualquier tipo, incluidos arrays y objetos. Esto causa que la
    función finalice su ejecución inmediatamente y pase el control de nuevo a
-   la línea desde la que fue llamada. Véase <function>return</function>
+   la línea desde la que fue llamada. Véase <link linkend="function.return"><literal>return</literal></link>
    para más información.
   </para>
   <note>
    <para>
-    Si se omite <function>return</function> será devuelto el valor
+    Si se omite <link linkend="function.return"><literal>return</literal></link> será devuelto el valor
     &null;.
    </para>
   </note>
   <para>
    <example>
-    <title>Uso de <function>return</function></title>
+    <title>Uso de <link linkend="function.return"><literal>return</literal></link></title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -415,11 +415,11 @@ echo cuadrado(4);   // imprime '16'.
   
   <para>
    Una función no puede devolver múltiples valores, pero se pueden obtener resultados
-   similares devolviendo una matriz.
+   similares devolviendo un array.
   </para>
   <para>
    <example>
-    <title>Devolver una matriz para obtener múltiples valores</title>
+    <title>Devolver un array para obtener múltiples valores</title>
     <programlisting role="php">
 <![CDATA[
 <?php
@@ -473,10 +473,10 @@ $nuevaref =& devolver_referencia();
   </para>
   <para>
    Las funciones variables no funcionarán con constructores de lenguaje como
-   <function>echo</function>, <function>print</function>,
+   <link linkend="function.echo"><literal>echo</literal></link>, <link linkend="function.print"><literal>print</literal></link>,
    <function>unset</function>, <function>isset</function>,
-   <function>empty</function>, <function>include</function>,
-   <function>require</function> y similares. Utilice funciones de envoltura para hacer
+   <function>empty</function>, <link linkend="function.include"><literal>include</literal></link>,
+   <link linkend="function.require"><literal>require</literal></link> y similares. Utilice funciones de envoltura para hacer
    uso de cualquiera de estos constructores como funciones variables.
   </para>
   <para>
