--- a/language/namespaces.xml
+++ b/language/namespaces.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 77e57fc9c7f3d98f082b4533e24f26072e3a094d Maintainer: andresdzphp Status: ready -->
-<!-- Reviewed: no -->
+<!-- EN-Revision: 9533989cdbeae085734cd0c7cb8134326efc3b23 Maintainer: andresdzphp Status: ready -->
+<!-- Reviewed: no Maintainer: andresdzphp -->
 
 <chapter xml:id="language.namespaces" xmlns="http://docbook.org/ns/docbook"
 version="1.1">
@@ -807,11 +807,11 @@ function strlen($str)
 echo E_ERROR, "\n"; // imprime "45"
 echo INI_ALL, "\n"; // imprime "7" - recurre a INI_ALL global
 
-echo strlen('hola'), "\n"; // imprime "3"
-if (is_array('hola')) { // imprime "no es una matriz"
-    echo "es una matriz\n";
+echo strlen('hola'), "\n"; // imprime "2"
+if (is_array('hola')) { // imprime "no es un array"
+    echo "es una array\n";
 } else {
-    echo "no es una matriz\n";
+    echo "no es un array\n";
 }
 ?>
     ]]>
