--- a/language/oop5/changelog.xml
+++ b/language/oop5/changelog.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: yes Maintainer: andresdzphp -->
-<!-- Reviewed: yes -->
 
 <sect1 xml:id="language.oop5.changelog" xmlns="http://docbook.org/ns/docbook">
  <title>Registro de cambios de POO</title>
@@ -110,8 +109,8 @@
       <entry>5.2.0</entry>
       <entry>
        Cambiado: Al método <link linkend="object.tostring">__toString()</link>
-       sólo se le invocaba cuando se le combinaba con <function>echo</function> o con
-       <function>print</function>. Pero ahora, se le invoca en cualquier contexto de strings
+       sólo se le invocaba cuando se le combinaba con <link linkend="function.echo"><literal>echo</literal></link> o con
+       <link linkend="function.print"><literal>print</literal></link>. Pero ahora, se le invoca en cualquier contexto de strings
        (p.ej, en <function>printf</function> con el modificador <literal>%s</literal>) pero no
        en contextos de otro tipo (p.ej. con el modificador <literal>%d</literal>).
        Desde PHP 5.2.0, convertir objetos a string sin el método <literal>__toString</literal>
