--- a/language/oop5/decon.xml
+++ b/language/oop5/decon.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 28d123ef985df5a7b86f3601e035968ee1b3b142 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: yes Maintainer: andresdzphp -->
 
 <sect1 xml:id="language.oop5.decon" xmlns="http://docbook.org/ns/docbook">
@@ -128,7 +128,7 @@ $obj = new MyDestructableClass();
   </para>
   <para>
    El destructor será invocado aún si la ejecución del script es detenida
-   usando <function>exit</function>. Llamar a <function>exit</function> en un
+   usando <link linkend="function.exit"><literal>exit</literal></link>. Llamar a <link linkend="function.exit"><literal>exit</literal></link> en un
    destructor evitará que se ejecuten las rutinas restantes de finalización.
   </para>
   <note>
