--- a/language/oop5/magic.xml
+++ b/language/oop5/magic.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: fcddfb2551140fba9a14a4c44dc9fa60004440c8 Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
  
  <sect1 xml:id="language.oop5.magic" xmlns="http://docbook.org/ns/docbook">
@@ -168,7 +168,7 @@ Hola Mundo
     Antes de PHP 5.2.0 el método 
     <link linkend="object.tostring">__toString()</link> 
     se llama sólo cuando se combina directamente con
-    <function>echo</function> o <function>print</function>.
+    <link linkend="function.echo"><literal>echo</literal></link> o <link linkend="function.print"><literal>print</literal></link>.
     Desde PHP 5.2.0, se le llama en cualquier contexto de string (e.j. en
     <function>printf</function> con  el modificador <literal>%s</literal>) pero no 
     en el contexto de otros tipos (e.j. con el modificador <literal>%d</literal>).
