--- a/language/types/string.xml
+++ b/language/types/string.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 1f067345c828ae456b72385969fdd85e54383d3d Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
 <sect1 xml:id="language.types.string">
@@ -844,7 +844,7 @@ $str[strlen($str)-1] = 'e';
    <literal>(string)</literal> o la función <function>strval</function>.
    La conversión automática a <type>string</type> tiene lugar en el contexto de
    una expresióin que necesita un <type>string</type>. Esto ocurre cuando se utilizan
-   las funciones <function>echo</function> o <function>print</function>, o cuando
+   las funciones <link linkend="function.echo"><literal>echo</literal></link> o <link linkend="function.print"><literal>print</literal></link>, o cuando
    una variables es comparada con un <type>string</type>. Las secciones sobre
    <link linkend="language.types">tipos</link> y
    <link linkend="language.types.type-juggling">Manipulación de tipos</link> pueden ayudarle
@@ -876,8 +876,8 @@ $str[strlen($str)-1] = 'e';
   
   <para>
    Los <type>array</type>s siempre se convierten en un <type>string</type>
-   <literal>"Array"</literal>. Debido a esto, tanto <function>echo</function> y
-   <function>print</function> no pueden pos si mismo mostrar el contenido de un
+   <literal>"Array"</literal>. Debido a esto, tanto <link linkend="function.echo"><literal>echo</literal></link> y
+   <link linkend="function.print"><literal>print</literal></link> no pueden pos si mismo mostrar el contenido de un
    <type>array</type>. Para ver un elemento individualmente, utilice una
    construcción como <literal>echo $arr['foo']</literal>. Mire los trucos en la parte
    inferior para mostrar el contenido por completo.
