--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 1e0cb85be781aedf9822622e3a654c1a6b8cd2cc Maintainer: andresdzphp Status: ready -->
+<!-- EN-Revision: a9b26c34e481fa948bcc7d75b73b441605142dd7 Maintainer: andresdzphp Status: ready -->
 <!-- Reviewed: no Maintainer: andresdzphp -->
 
 <chapter xml:id="language.variables" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -127,7 +127,7 @@ $bar = &test();    // Inválido.
    predeterminado de acuerdo a su tipo dependiendo del contexto en el que
    son usadas - las booleanas se asumen como &false;, los enteros y
    flotantes como cero, las cadenas (p.ej. usadas en
-   <function>echo</function>) se establecen como una cadena vacía y las
+   <link linkend="function.echo"><literal>echo</literal></link>) se establecen como una cadena vacía y las
    matrices se convierten en un array vacío.
   </para>
   <para>
